update: changed users controller. login response body's data property now contains null instead of userData
